--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^5.2.1",
+    "react-id-swiper": "^4.0.0",
     "swiper": "^11.1.5"
   },
   "devDependencies": {
